--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
   <div class="card" style="margin-top:15px;">
     <div class="row">
+      <label>Save <input id="saveName" value="1"/></label>
       <label>
         Mode
         <select id="mode">
           <option value="standard">Standard</option>
           <option value="anomaly">Anomaly</option>
           <option value="rupture">Rupture</option>
+          <option value="hybrid">Hybrid (Standard + Anomaly)</option>
         </select>
       </label>
     </div>
@@ -149,18 +151,7 @@
       <div class="form-row cols-3">
         <label>Enemy Level <input id="enemyLevel" type="number" value="70" min="1" step="1"/></label>
         <label>Enemy DEF <input id="enemyDef" type="number" value="953" min="0" step="1"/></label>
-        <label>All-Attribute RES (%) <input id="enemyResAllPct" type="number" value="0" step="0.1"/></label>
-      </div>
-
-      <div class="form-row cols-3">
-        <label>Physical RES (%) <input id="enemyResPhysicalPct" type="number" value="" step="0.1"/></label>
-        <label>Fire RES (%) <input id="enemyResFirePct" type="number" value="" step="0.1"/></label>
-        <label>Ice RES (%) <input id="enemyResIcePct" type="number" value="" step="0.1"/></label>
-      </div>
-
-      <div class="form-row cols-2">
-        <label>Electric RES (%) <input id="enemyResElectricPct" type="number" value="" step="0.1"/></label>
-        <label>Ether RES (%) <input id="enemyResEtherPct" type="number" value="" step="0.1"/></label>
+        <label>Attribute RES (%) <input id="enemyResAllPct" type="number" value="0" step="0.1"/></label>
       </div>
 
       <div class="form-row cols-2">
