Basic features are done. Need polish and testing.

--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
 
       <div class="form-row cols-3">
         <label>DEF Reduction (%) <input id="defReductionPct" type="number" value="0" step="0.1"/></label>
+        <label>RES Reduction (%) <input id="resReductionPct" type="number" value="0" step="0.1"/> </label>
+        <label>RES Ignore (%) <input id="resIgnorePct" type="number" value="0" step="0.1"/> </label>
       </div>
 
       <div class="form-row cols-3">
